--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>HELLO </h1>
+    <img src="G:\WorkingArea\MyProfile\assets\images\image 1.png" alt="" srcset="">
 </body>
 </html>
