--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>HELLO </h1>
-    <img src="G:\WorkingArea\MyProfile\assets\images\image 1.png" alt="" srcset="">
+    <img src="G:\WorkingArea\MyProfile\assets\images\image 1.png" alt="" srcset="" width="100">
+    <p>i dont know why it is not working</p>
 </body>
 </html>
